utilise text-wrap to prevent widows in paragraph text

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -87,6 +87,7 @@ p {
   color: $ironside;
   line-height: 1.45em;
   margin: 0 0 $padding-lg;
+  text-wrap: pretty;
 
   strong {
     font-weight: 700;
